--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
+  <div id="app">{{name}}</div>
   <script src="./dist/vue.js"></script>
   <script>
     const vm = new Vue({
+      el: "#app",
       data() {
         return {
           name: 'zhangsan'
