--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-  <div id="app">
+  <div id="app" style="color:red">
     <ul>
-      <li>{{name}}</li>
+      <li>hello {{name}} world</li>
       <li>{{name}}</li>
       <li>{{name}}</li>
       <li>{{name}}</li>
