--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         }
       }
     })
+    setTimeout(() => {
+      vm.name = "1"
+      vm.name = "2"
+      vm.name = "3"
+      vm.name = "4"
+    }, 1000)
   </script>
 </body>
 
