--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <li>{{name}}</li>
       <li>{{name}}</li>
       <li>{{name}}</li>
-      <li>{{name}}</li>
+      <li>{{arr}}</li>
     </ul>
   </div>
   <script src="./dist/vue.js"></script>
@@ -24,15 +24,18 @@
       el: "#app",
       data() {
         return {
-          name: 'zhangsan'
+          name: 'zhangsan',
+          arr: [[4], 1, 2, 3]
         }
       }
     })
     setTimeout(() => {
-      vm.name = "1"
-      vm.name = "2"
-      vm.name = "3"
-      vm.name = "4"
+      // vm.name = "1"
+      // vm.name = "2"
+      // vm.name = "3"
+      // vm.name = "4"
+      // vm.arr.push(8)
+      vm.arr[0].push(8)
     }, 1000)
   </script>
 </body>
